--- a/Completed/HW 1  - Basic ML Library/Grader HW 1.ipynb
+++ b/Completed/HW 1  - Basic ML Library/Grader HW 1.ipynb
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y = features.preprocess_ver_1(csv_df, \"Price\")"
+    "X, y = features.preprocess_ver_1(csv_df)"
    ]
   },
   {
@@ -119,212 +119,190 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Suburb</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Address</th>\n",
-       "      <td>3.922000e+03</td>\n",
-       "      <td>6.458000e+03</td>\n",
-       "      <td>6.960000e+03</td>\n",
-       "      <td>1.374000e+03</td>\n",
-       "      <td>8.740000e+03</td>\n",
+       "      <td>3922.0000</td>\n",
+       "      <td>6458.0000</td>\n",
+       "      <td>6960.0000</td>\n",
+       "      <td>1374.0000</td>\n",
+       "      <td>8740.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Rooms</th>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>4.0000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>2.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Type</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Method</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>4.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SellerG</th>\n",
-       "      <td>2.200000e+01</td>\n",
-       "      <td>2.200000e+01</td>\n",
-       "      <td>1.470000e+02</td>\n",
-       "      <td>1.470000e+02</td>\n",
-       "      <td>1.470000e+02</td>\n",
+       "      <td>22.0000</td>\n",
+       "      <td>22.0000</td>\n",
+       "      <td>147.0000</td>\n",
+       "      <td>147.0000</td>\n",
+       "      <td>147.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
-       "      <td>1.459555e+18</td>\n",
-       "      <td>1.491178e+18</td>\n",
-       "      <td>1.459901e+18</td>\n",
-       "      <td>1.467677e+18</td>\n",
-       "      <td>1.470787e+18</td>\n",
+       "      <td>62.0000</td>\n",
+       "      <td>63.0000</td>\n",
+       "      <td>64.0000</td>\n",
+       "      <td>69.0000</td>\n",
+       "      <td>74.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Distance</th>\n",
-       "      <td>2.500000e+00</td>\n",
-       "      <td>2.500000e+00</td>\n",
-       "      <td>2.500000e+00</td>\n",
-       "      <td>2.500000e+00</td>\n",
-       "      <td>2.500000e+00</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>2.5000</td>\n",
+       "      <td>2.5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Postcode</th>\n",
-       "      <td>3.067000e+03</td>\n",
-       "      <td>3.067000e+03</td>\n",
-       "      <td>3.067000e+03</td>\n",
-       "      <td>3.067000e+03</td>\n",
-       "      <td>3.067000e+03</td>\n",
+       "      <td>3067.0000</td>\n",
+       "      <td>3067.0000</td>\n",
+       "      <td>3067.0000</td>\n",
+       "      <td>3067.0000</td>\n",
+       "      <td>3067.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Bedroom2</th>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>3.000000e+00</td>\n",
-       "      <td>4.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>3.0000</td>\n",
+       "      <td>4.0000</td>\n",
+       "      <td>2.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Bathroom</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>1.000000e+00</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>1.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Car</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>2.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Landsize</th>\n",
-       "      <td>1.560000e+02</td>\n",
-       "      <td>1.340000e+02</td>\n",
-       "      <td>1.200000e+02</td>\n",
-       "      <td>2.450000e+02</td>\n",
-       "      <td>2.560000e+02</td>\n",
+       "      <td>156.0000</td>\n",
+       "      <td>134.0000</td>\n",
+       "      <td>120.0000</td>\n",
+       "      <td>245.0000</td>\n",
+       "      <td>256.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>BuildingArea</th>\n",
-       "      <td>7.900000e+01</td>\n",
-       "      <td>1.500000e+02</td>\n",
-       "      <td>1.420000e+02</td>\n",
-       "      <td>2.100000e+02</td>\n",
-       "      <td>1.070000e+02</td>\n",
+       "      <td>79.0000</td>\n",
+       "      <td>150.0000</td>\n",
+       "      <td>142.0000</td>\n",
+       "      <td>210.0000</td>\n",
+       "      <td>107.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>YearBuilt</th>\n",
-       "      <td>1.900000e+03</td>\n",
-       "      <td>1.900000e+03</td>\n",
-       "      <td>2.014000e+03</td>\n",
-       "      <td>1.910000e+03</td>\n",
-       "      <td>1.890000e+03</td>\n",
+       "      <td>1900.0000</td>\n",
+       "      <td>1900.0000</td>\n",
+       "      <td>2014.0000</td>\n",
+       "      <td>1910.0000</td>\n",
+       "      <td>1890.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CouncilArea</th>\n",
-       "      <td>3.100000e+01</td>\n",
-       "      <td>3.100000e+01</td>\n",
-       "      <td>3.100000e+01</td>\n",
-       "      <td>3.100000e+01</td>\n",
-       "      <td>3.100000e+01</td>\n",
+       "      <td>31.0000</td>\n",
+       "      <td>31.0000</td>\n",
+       "      <td>31.0000</td>\n",
+       "      <td>31.0000</td>\n",
+       "      <td>31.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lattitude</th>\n",
-       "      <td>-3.780790e+01</td>\n",
-       "      <td>-3.780930e+01</td>\n",
-       "      <td>-3.780720e+01</td>\n",
-       "      <td>-3.780240e+01</td>\n",
-       "      <td>-3.780600e+01</td>\n",
+       "      <td>-37.8079</td>\n",
+       "      <td>-37.8093</td>\n",
+       "      <td>-37.8072</td>\n",
+       "      <td>-37.8024</td>\n",
+       "      <td>-37.8060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Longtitude</th>\n",
-       "      <td>1.449934e+02</td>\n",
-       "      <td>1.449944e+02</td>\n",
-       "      <td>1.449941e+02</td>\n",
-       "      <td>1.449993e+02</td>\n",
-       "      <td>1.449954e+02</td>\n",
+       "      <td>144.9934</td>\n",
+       "      <td>144.9944</td>\n",
+       "      <td>144.9941</td>\n",
+       "      <td>144.9993</td>\n",
+       "      <td>144.9954</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Regionname</th>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "      <td>2.000000e+00</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>2.0000</td>\n",
+       "      <td>2.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Propertycount</th>\n",
-       "      <td>4.019000e+03</td>\n",
-       "      <td>4.019000e+03</td>\n",
-       "      <td>4.019000e+03</td>\n",
-       "      <td>4.019000e+03</td>\n",
-       "      <td>4.019000e+03</td>\n",
+       "      <td>4019.0000</td>\n",
+       "      <td>4019.0000</td>\n",
+       "      <td>4019.0000</td>\n",
+       "      <td>4019.0000</td>\n",
+       "      <td>4019.0000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         2             4             6             11  \\\n",
-       "Suburb         0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
-       "Address        3.922000e+03  6.458000e+03  6.960000e+03  1.374000e+03   \n",
-       "Rooms          2.000000e+00  3.000000e+00  4.000000e+00  3.000000e+00   \n",
-       "Type           0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
-       "Method         1.000000e+00  3.000000e+00  4.000000e+00  1.000000e+00   \n",
-       "SellerG        2.200000e+01  2.200000e+01  1.470000e+02  1.470000e+02   \n",
-       "Date           1.459555e+18  1.491178e+18  1.459901e+18  1.467677e+18   \n",
-       "Distance       2.500000e+00  2.500000e+00  2.500000e+00  2.500000e+00   \n",
-       "Postcode       3.067000e+03  3.067000e+03  3.067000e+03  3.067000e+03   \n",
-       "Bedroom2       2.000000e+00  3.000000e+00  3.000000e+00  4.000000e+00   \n",
-       "Bathroom       1.000000e+00  2.000000e+00  1.000000e+00  2.000000e+00   \n",
-       "Car            0.000000e+00  0.000000e+00  2.000000e+00  0.000000e+00   \n",
-       "Landsize       1.560000e+02  1.340000e+02  1.200000e+02  2.450000e+02   \n",
-       "BuildingArea   7.900000e+01  1.500000e+02  1.420000e+02  2.100000e+02   \n",
-       "YearBuilt      1.900000e+03  1.900000e+03  2.014000e+03  1.910000e+03   \n",
-       "CouncilArea    3.100000e+01  3.100000e+01  3.100000e+01  3.100000e+01   \n",
-       "Lattitude     -3.780790e+01 -3.780930e+01 -3.780720e+01 -3.780240e+01   \n",
-       "Longtitude     1.449934e+02  1.449944e+02  1.449941e+02  1.449993e+02   \n",
-       "Regionname     2.000000e+00  2.000000e+00  2.000000e+00  2.000000e+00   \n",
-       "Propertycount  4.019000e+03  4.019000e+03  4.019000e+03  4.019000e+03   \n",
-       "\n",
-       "                         14  \n",
-       "Suburb         0.000000e+00  \n",
-       "Address        8.740000e+03  \n",
-       "Rooms          2.000000e+00  \n",
-       "Type           0.000000e+00  \n",
-       "Method         1.000000e+00  \n",
-       "SellerG        1.470000e+02  \n",
-       "Date           1.470787e+18  \n",
-       "Distance       2.500000e+00  \n",
-       "Postcode       3.067000e+03  \n",
-       "Bedroom2       2.000000e+00  \n",
-       "Bathroom       1.000000e+00  \n",
-       "Car            2.000000e+00  \n",
-       "Landsize       2.560000e+02  \n",
-       "BuildingArea   1.070000e+02  \n",
-       "YearBuilt      1.890000e+03  \n",
-       "CouncilArea    3.100000e+01  \n",
-       "Lattitude     -3.780600e+01  \n",
-       "Longtitude     1.449954e+02  \n",
-       "Regionname     2.000000e+00  \n",
-       "Propertycount  4.019000e+03  "
+       "                      2          4          6          11         14\n",
+       "Suburb            0.0000     0.0000     0.0000     0.0000     0.0000\n",
+       "Address        3922.0000  6458.0000  6960.0000  1374.0000  8740.0000\n",
+       "Rooms             2.0000     3.0000     4.0000     3.0000     2.0000\n",
+       "Type              0.0000     0.0000     0.0000     0.0000     0.0000\n",
+       "Method            1.0000     3.0000     4.0000     1.0000     1.0000\n",
+       "SellerG          22.0000    22.0000   147.0000   147.0000   147.0000\n",
+       "Date             62.0000    63.0000    64.0000    69.0000    74.0000\n",
+       "Distance          2.5000     2.5000     2.5000     2.5000     2.5000\n",
+       "Postcode       3067.0000  3067.0000  3067.0000  3067.0000  3067.0000\n",
+       "Bedroom2          2.0000     3.0000     3.0000     4.0000     2.0000\n",
+       "Bathroom          1.0000     2.0000     1.0000     2.0000     1.0000\n",
+       "Car               0.0000     0.0000     2.0000     0.0000     2.0000\n",
+       "Landsize        156.0000   134.0000   120.0000   245.0000   256.0000\n",
+       "BuildingArea     79.0000   150.0000   142.0000   210.0000   107.0000\n",
+       "YearBuilt      1900.0000  1900.0000  2014.0000  1910.0000  1890.0000\n",
+       "CouncilArea      31.0000    31.0000    31.0000    31.0000    31.0000\n",
+       "Lattitude       -37.8079   -37.8093   -37.8072   -37.8024   -37.8060\n",
+       "Longtitude      144.9934   144.9944   144.9941   144.9993   144.9954\n",
+       "Regionname        2.0000     2.0000     2.0000     2.0000     2.0000\n",
+       "Propertycount  4019.0000  4019.0000  4019.0000  4019.0000  4019.0000"
       ]
      },
      "execution_count": 6,
@@ -415,8 +393,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.88 s, sys: 197 ms, total: 6.07 s\n",
-      "Wall time: 6.3 s\n"
+      "CPU times: user 5.03 s, sys: 50.4 ms, total: 5.08 s\n",
+      "Wall time: 5.09 s\n"
      ]
     },
     {
@@ -456,7 +434,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71836365606.17682 71836365606.17682\n"
+      "79240089652.32602 79240089652.32602\n"
      ]
     }
    ],
@@ -488,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8308478934816088 0.8308478934816088\n"
+      "0.8258027234299745 0.8258027234299745\n"
      ]
     }
    ],
@@ -517,7 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9743623796671624 0.9743623796671624\n"
+      "0.9736616371654871 0.9736616371654871\n"
      ]
     }
    ],
