Sample Melbourne dataset for grading

--- a/Completed/HW 2 - DecisionTreeRegressor/Grader 2 - Decision Tree Regressor.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/Grader 2 - Decision Tree Regressor.ipynb
@@ -397,11 +397,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "_mel_sampled = features.Object()\n",
+    "_mel_sampled.X_train = _mel.X_train[:200]\n",
+    "_mel_sampled.y_train = _mel.y_train[:200]\n",
+    "_mel_sampled.X_test = _mel.X_test[:50]\n",
+    "_mel_sampled.y_test = _mel.y_test[:50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time \n",
     "compare_trees(\n",
-    "    sklearn.tree.DecisionTreeRegressor(max_depth=2, min_samples_leaf=1),\n",
-    "    csc665.tree.DecisionTreeRegressor(max_depth=2, min_samples_leaf=1),\n",
-    "    _mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test)"
+    "    sklearn.tree.DecisionTreeRegressor(max_depth=5, min_samples_leaf=1),\n",
+    "    csc665.tree.DecisionTreeRegressor(max_depth=5, min_samples_leaf=1),\n",
+    "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "compare_trees(\n",
+    "    sklearn.tree.DecisionTreeRegressor(max_depth=100, min_samples_leaf=1),\n",
+    "    csc665.tree.DecisionTreeRegressor(max_depth=100, min_samples_leaf=1),\n",
+    "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time \n",
+    "compare_trees(\n",
+    "    sklearn.tree.DecisionTreeRegressor(max_depth=100, min_samples_leaf=7),\n",
+    "    csc665.tree.DecisionTreeRegressor(max_depth=100, min_samples_leaf=7),\n",
+    "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
    ]
   },
   {
