--- a/Completed/HW 2 - DecisionTreeRegressor/1. Minimal Grader 2 - Decision Tree Regressor.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/1. Minimal Grader 2 - Decision Tree Regressor.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Don't change the grader**. It will be used to grade your code as is. Fix any errors in your library."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Library Code Here"
+    "# Your Code Imported Here\n"
    ]
   },
   {
@@ -41,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
@@ -51,13 +57,6 @@
     "class Object(object): pass\n",
     "class TC(ut.TestCase): pass\n",
     "tc = TC()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Homework 2"
    ]
   },
   {
@@ -120,13 +119,6 @@
     "        _income.y, \n",
     "        test_size=0.2, \n",
     "        random_state=RAND_STATE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Income Dataset"
    ]
   },
   {
