Update tree graders

--- a/Completed/HW 2 - DecisionTreeRegressor/1. Minimal Grader 2 - Decision Tree Regressor.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/1. Minimal Grader 2 - Decision Tree Regressor.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Your Code Imported Here\n"
+    "# Your Code Imported Here"
    ]
   },
   {
