--- a/Completed/HW 2 - DecisionTreeRegressor/2. Complete Grader.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/2. Complete Grader.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Don't change the grader**. It will be used to grade your code as is. Fix any errors in your library."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -15,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import Your Code Here"
+    "# Your Code Imported Here"
    ]
   },
   {
@@ -64,18 +71,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "# Homework 1"
+    "# Retest Library from Homework 1\n",
+    "\n",
+    "It will be needed to use the Melbourne dataset. If you're seeing errors, \n",
+    "please refer to the **sample implementation** of the library functions in **iLearn**."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## `preprocess_ver_1`"
    ]
@@ -83,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_mel = features.Object()\n",
@@ -95,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(_mel.X.shape, _mel.y.shape)\n",
@@ -108,9 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## `train_test_split`"
    ]
@@ -118,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test = features.train_test_split(\n",
@@ -130,9 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(_mel.X.shape, _mel.X_train.shape, _mel.X_test.shape, _mel.y_train.shape, _mel.y_test.shape)\n",
@@ -144,9 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if \"DataFrame\" in str(type(_mel.y_train)):\n",
@@ -159,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -171,9 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## `MSE`"
    ]
@@ -181,9 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_st = Object()\n",
@@ -199,9 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## $R^2$ - Test set"
    ]
@@ -209,9 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_st.r2_test = metrics.rsq(rf.predict(_mel.X_test), _mel.y_test)\n",
@@ -224,9 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## $R^2$ - Train set"
    ]
@@ -234,9 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "_st.r2_train = metrics.rsq(rf.predict(_mel.X_train), _mel.y_train)\n",
@@ -311,13 +291,6 @@
     "        test_size=0.2, \n",
     "        shuffle=True, \n",
     "        random_state=RAND_STATE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Income Dataset"
    ]
   },
   {
