--- a/Completed/HW 2 - DecisionTreeRegressor/1. Minimal Grader 2 - Decision Tree Regressor.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/1. Minimal Grader 2 - Decision Tree Regressor.ipynb
@@ -73,7 +73,7 @@
     "    expected = metrics.rsq(sktree.predict(X_train), y_train)\n",
     "    actual = metrics.rsq(our_tree.predict(X_train), y_train)\n",
     "    print(\"Train, sklearn, ours:\", expected, actual)\n",
-    "    tc.assertAlmostEqual(expected, actual)\n",
+    "    tc.assertAlmostEqual(expected, actual, places=1)\n",
     "    \n",
     "    expected = metrics.rsq(sktree.predict(X_test), y_test)\n",
     "    actual = metrics.rsq(our_tree.predict(X_test), y_test)\n",
