--- a/Completed/HW 3 - RandomForestRegressor/1. Grader 3 - Random Forest Regressor.ipynb
+++ b/Completed/HW 3 - RandomForestRegressor/1. Grader 3 - Random Forest Regressor.ipynb
@@ -68,12 +68,11 @@
     "def compare_models(sk_model, our_model, X_train, X_test, y_train, y_test):\n",
     "    sk_model.fit(X_train, y_train)\n",
     "    our_model.fit(X_train, y_train)\n",
-    "#     print(our_tree)\n",
     "    \n",
     "    expected = metrics.rsq(sk_model.predict(X_train), y_train)\n",
     "    actual = metrics.rsq(our_model.predict(X_train), y_train)\n",
     "    print(\"Train, sklearn, ours:\", expected, actual)\n",
-    "    tc.assertAlmostEqual(expected, actual, places=1)\n",
+    "    tc.assertLess(abs(expected - actual), 0.19)\n",
     "    \n",
     "    expected = metrics.rsq(sk_model.predict(X_test), y_test)\n",
     "    actual = metrics.rsq(our_model.predict(X_test), y_test)\n",
@@ -197,8 +196,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "_mel = Object()\n",
-    "_mel.X, _mel.y = features.preprocess_ver_1(csv_df, \"Price\")"
+    "_mel.X, _mel.y = features.preprocess_ver_1(csv_df, \"Price\")\n",
+    "_mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test = \\\n",
+    "    train_test_split(_mel.X, _mel.y, test_size=0.2, random_state=RAND_STATE)"
    ]
   },
   {
@@ -240,6 +243,51 @@
     "    sklearn.ensemble.RandomForestRegressor(n_estimators=1, random_state=RAND_STATE),\n",
     "    csc665.ensemble.RandomForestRegressor(n_estimators=1, sample_ratio=1.0, random_state=RAND_STATE),\n",
     "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_models(\n",
+    "    sklearn.ensemble.RandomForestRegressor(n_estimators=10, random_state=RAND_STATE),\n",
+    "    csc665.ensemble.RandomForestRegressor(n_estimators=10, sample_ratio=1.0, random_state=RAND_STATE),\n",
+    "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_models(\n",
+    "    sklearn.ensemble.RandomForestRegressor(n_estimators=200, random_state=RAND_STATE),\n",
+    "    csc665.ensemble.RandomForestRegressor(n_estimators=200, sample_ratio=1.0, random_state=RAND_STATE),\n",
+    "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Full Melbourne - may take too long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "compare_models(\n",
+    "    sklearn.ensemble.RandomForestRegressor(n_estimators=200, random_state=RAND_STATE),\n",
+    "    csc665.ensemble.RandomForestRegressor(n_estimators=200, sample_ratio=0.2, random_state=RAND_STATE),\n",
+    "    _mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test)"
    ]
   },
   {
