Update RF grader - reduce the number of trees in case of inefficient tree implementations.

--- a/Completed/HW 3 - RandomForestRegressor/1. Grader 3 - Random Forest Regressor.ipynb
+++ b/Completed/HW 3 - RandomForestRegressor/1. Grader 3 - Random Forest Regressor.ipynb
@@ -239,6 +239,8 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "compare_models(\n",
     "    sklearn.ensemble.RandomForestRegressor(n_estimators=1, random_state=RAND_STATE),\n",
     "    csc665.ensemble.RandomForestRegressor(n_estimators=1, sample_ratio=1.0, random_state=RAND_STATE),\n",
@@ -251,6 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "compare_models(\n",
     "    sklearn.ensemble.RandomForestRegressor(n_estimators=10, random_state=RAND_STATE),\n",
     "    csc665.ensemble.RandomForestRegressor(n_estimators=10, sample_ratio=1.0, random_state=RAND_STATE),\n",
@@ -263,9 +267,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
+    "\n",
     "compare_models(\n",
-    "    sklearn.ensemble.RandomForestRegressor(n_estimators=200, random_state=RAND_STATE),\n",
-    "    csc665.ensemble.RandomForestRegressor(n_estimators=200, sample_ratio=1.0, random_state=RAND_STATE),\n",
+    "    sklearn.ensemble.RandomForestRegressor(n_estimators=50, random_state=RAND_STATE),\n",
+    "    csc665.ensemble.RandomForestRegressor(n_estimators=50, sample_ratio=1.0, random_state=RAND_STATE),\n",
     "    _mel_sampled.X_train, _mel_sampled.X_test, _mel_sampled.y_train, _mel_sampled.y_test)"
    ]
   },
@@ -282,12 +288,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "\n",
-    "compare_models(\n",
-    "    sklearn.ensemble.RandomForestRegressor(n_estimators=200, random_state=RAND_STATE),\n",
-    "    csc665.ensemble.RandomForestRegressor(n_estimators=200, sample_ratio=0.2, random_state=RAND_STATE),\n",
-    "    _mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test)"
+    "# compare_models(\n",
+    "#     sklearn.ensemble.RandomForestRegressor(n_estimators=100, random_state=RAND_STATE),\n",
+    "#     csc665.ensemble.RandomForestRegressor(n_estimators=100, sample_ratio=0.1, random_state=RAND_STATE),\n",
+    "#     _mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test)"
    ]
   },
   {
