--- a/Completed/HW 2 - DecisionTreeRegressor/2. Complete Grader.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/2. Complete Grader.ipynb
@@ -31,8 +31,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from csc665 import features, metrics\n",
-    "import csc665.tree"
+    "import csc665.tree\n",
+    "\n",
+    "# Use Instructor's code for basic functions to avoid various inconsistencies\n",
+    "# For Students: you can change this to use YOUR code if you fix any errors.\n",
+    "from csc665_instructor import features, metrics"
    ]
   },
   {
@@ -48,7 +51,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
