Add a grader for the decision tree classifier.

--- a/Completed/HW 2 - DecisionTreeRegressor/2. Complete Grader.ipynb
+++ b/Completed/HW 2 - DecisionTreeRegressor/2. Complete Grader.ipynb
@@ -73,7 +73,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Retest Library from Homework 1\n",
     "\n",
@@ -83,7 +85,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## `preprocess_ver_1`"
    ]
@@ -91,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "_mel = features.Object()\n",
@@ -101,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "print(_mel.X.shape, _mel.y.shape)\n",
@@ -112,7 +120,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## `train_test_split`"
    ]
@@ -120,7 +130,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "_mel.X_train, _mel.X_test, _mel.y_train, _mel.y_test = features.train_test_split(\n",
@@ -130,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "print(_mel.X.shape, _mel.X_train.shape, _mel.X_test.shape, _mel.y_train.shape, _mel.y_test.shape)\n",
@@ -142,7 +156,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "if \"DataFrame\" in str(type(_mel.y_train)):\n",
@@ -155,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -165,7 +183,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## `MSE`"
    ]
@@ -173,7 +193,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "_st = Object()\n",
@@ -189,7 +211,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## $R^2$ - Test set"
    ]
@@ -197,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "_st.r2_test = metrics.rsq(rf.predict(_mel.X_test), _mel.y_test)\n",
@@ -210,7 +236,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## $R^2$ - Train set"
    ]
@@ -218,7 +246,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "_st.r2_train = metrics.rsq(rf.predict(_mel.X_train), _mel.y_train)\n",
@@ -378,6 +408,46 @@
     "_mel_sampled.X_test = _mel.X_test[:50]\n",
     "_mel_sampled.y_test = _mel.y_test[:50]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = csc665.tree.DecisionTreeRegressor(max_depth=100, min_samples_leaf=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%prun\n",
+    "dt.fit(_mel_sampled.X_train, _mel_sampled.y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
