--- a/Completed/HW 7 - Regressions/Linear and Logistic Regressions.ipynb
+++ b/Completed/HW 7 - Regressions/Linear and Logistic Regressions.ipynb
@@ -8,6 +8,9 @@
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import numpy as np\n",
     "import sklearn.linear_model as sk_linear\n",
     "import pandas as pd\n",
@@ -59,12 +62,12 @@
     "    sklearn.fit(obj.X_train, obj.y_train)\n",
     "    \n",
     "    expected = r2_score(obj.y_train, sklearn.predict(obj.X_train))\n",
-    "    actual  = r2_score(obj.y_train, sklearn.predict(obj.X_train))\n",
+    "    actual  = r2_score(obj.y_train, ours.predict(obj.X_train))\n",
     "    print(\"Train R^2 - sklearn, ours:\", expected, actual)\n",
     "    tc.assertLess(abs(expected - actual), 0.19)\n",
     "    \n",
     "    expected = r2_score(obj.y_test, sklearn.predict(obj.X_test))\n",
-    "    actual  = r2_score(obj.y_test, sklearn.predict(obj.X_test))\n",
+    "    actual  = r2_score(obj.y_test, ours.predict(obj.X_test))\n",
     "    print(\"Test R^2 - sklearn, ours:\", expected, actual)\n",
     "    tc.assertLess(abs(expected - actual), 0.19)    "
    ]
@@ -79,14 +82,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_inc = Object()\n",
     "_inc.RANDOM_STATE = 3454\n",
     "_inc.data_df = pd.read_csv(\"http://www-bcf.usc.edu/~gareth/ISL/Income2.csv\")\n",
     "_inc.data_df.drop(\"Unnamed: 0\", axis=1, inplace=True)\n",
-    "_inc.X = _inc.data_df.drop('Income', axis=1)\n",
+    "_inc.X = _inc.data_df.drop('Income', axis=1).values\n",
     "_inc.y = _inc.data_df[\"Income\"].values\n",
     "_inc.X_train, _inc.X_test, _inc.y_train, _inc.y_test = train_test_split(\n",
     "    _inc.X, _inc.y, test_size = 0.2, random_state=_inc.RANDOM_STATE)"
@@ -112,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "_iris = Object()\n",
@@ -192,7 +199,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "compare_classifiers(our_linear.LogisticRegression(0.01, 200),\n",
