--- a/Completed/HW 7 - Regressions/Linear and Logistic Regressions.ipynb
+++ b/Completed/HW 7 - Regressions/Linear and Logistic Regressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -100,11 +100,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test_lin_reg(our_linear.LinearRegression(0.01, 200), \n",
     "             sk_linear.LinearRegression(), _inc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "X = np.array([[1], [8], [15]])\n",
+    "y = np.array([1, 4, 6])\n",
+    "lr = our_linear.LinearRegression(0.1, 1)\n",
+    "lr.fit(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.36666667, 4.1       ])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr._weights"
    ]
   },
   {
