Add initial_weights to the grader.

--- a/Completed/HW 8 - Backpropagation/Backpropagation.ipynb
+++ b/Completed/HW 8 - Backpropagation/Backpropagation.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
@@ -38,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run Tests"
+    "# Pre-test"
    ]
   },
   {
@@ -47,7 +49,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = graph.Graph(0, 0, 1, 0.1)"
+    "np.random.randn(1, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "initial_weights = [\n",
+    "    np.array([[-0.06712879,  1.32756237, -0.37880782],\n",
+    "             [ 0.578714  ,  1.13425279,  1.29724594]]),\n",
+    "    np.array([[0.77283363, -1.14595272,  1.60115422]])\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "w1 = initial_weights[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = graph.Graph(0, 0, 1, learning_rate=0.1, initial_weights=[\n",
+    "    np.array([[-0.06712879,  1.32756237, -0.37880782],\n",
+    "             [ 0.578714  ,  1.13425279,  1.29724594]]),\n",
+    "    np.array([[0.77283363, -1.14595272,  1.60115422]])\n",
+    "])"
    ]
   },
   {
@@ -108,7 +149,10 @@
     "    return -y*np.log(h) - (1-y)*np.log(1-h)\n",
     "\n",
     "def test_one(x1, x2, y):\n",
-    "    g = graph.Graph(x1, x2, y, 0.1)\n",
+    "    weights = [np.random.randn(2, 3), np.random.randn(1, 3)]\n",
+    "    \n",
+    "    g = graph.Graph(x1, x2, y, learning_rate=0.1, initial_weights=weights)\n",
+    "    \n",
     "    for i in range(500):\n",
     "        g.forward()\n",
     "        g.backward()\n",
