Rename the graph

--- a/Completed/HW 8 - Backpropagation/Backpropagation.ipynb
+++ b/Completed/HW 8 - Backpropagation/Backpropagation.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = graph.Graph(0, 0, 1, learning_rate=0.1, initial_weights=[\n",
+    "g = graph.XnorGraph(0, 0, 1, learning_rate=0.1, initial_weights=[\n",
     "    np.array([[-0.06712879,  1.32756237, -0.37880782],\n",
     "             [ 0.578714  ,  1.13425279,  1.29724594]]),\n",
     "    np.array([[0.77283363, -1.14595272,  1.60115422]])\n",
@@ -151,7 +151,7 @@
     "def test_one(x1, x2, y):\n",
     "    weights = [np.random.randn(2, 3), np.random.randn(1, 3)]\n",
     "    \n",
-    "    g = graph.Graph(x1, x2, y, learning_rate=0.1, initial_weights=weights)\n",
+    "    g = graph.XnorGraph(x1, x2, y, learning_rate=0.1, initial_weights=weights)\n",
     "    \n",
     "    for i in range(500):\n",
     "        g.forward()\n",
@@ -198,15 +198,6 @@
    "source": [
     "test_one(0, 0, 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
