Add the pre-defined weights section.

--- a/Completed/HW 8 - Backpropagation/Backpropagation.ipynb
+++ b/Completed/HW 8 - Backpropagation/Backpropagation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,6 +13,8 @@
     "\n",
     "import numpy as np\n",
     "import unittest\n",
+    "\n",
+    "class Object(object): pass\n",
     "\n",
     "class TC(unittest.TestCase): pass\n",
     "tc = TC()"
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -40,27 +42,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre-test"
+    "# Predefined Weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.randn(1, 3)"
+    "_pre = Object()\n",
+    "_pre.initial_weights = [\n",
+    "    np.array([[-30,  20, 20],\n",
+    "              [10,  -20, -20]]),\n",
+    "    np.array([[-10, 20, 20]])\n",
+    "]\n",
+    "\n",
+    "_pre.g = graph.XnorGraph(1, 0, 1, learning_rate=0.1, initial_weights=_pre.initial_weights)\n",
+    "tc.assertLess(_pre.g.predict(), 0.01)\n",
+    "\n",
+    "_pre.g = graph.XnorGraph(0, 1, 1, learning_rate=0.1, initial_weights=_pre.initial_weights)\n",
+    "tc.assertLess(_pre.g.predict(), 0.01)\n",
+    "\n",
+    "_pre.g = graph.XnorGraph(1, 1, 1, learning_rate=0.1, initial_weights=_pre.initial_weights)\n",
+    "tc.assertGreater(_pre.g.predict(), 0.99)\n",
+    "\n",
+    "_pre.g = graph.XnorGraph(0, 0, 1, learning_rate=0.1, initial_weights=_pre.initial_weights)\n",
+    "tc.assertGreater(_pre.g.predict(), 0.99)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random Weights"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "initial_weights = [\n",
+    "_rnd = Object()\n",
+    "_rnd.initial_weights = [\n",
     "    np.array([[-0.06712879,  1.32756237, -0.37880782],\n",
     "             [ 0.578714  ,  1.13425279,  1.29724594]]),\n",
     "    np.array([[0.77283363, -1.14595272,  1.60115422]])\n",
@@ -69,22 +96,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "w1 = initial_weights[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = graph.XnorGraph(0, 0, 1, learning_rate=0.1, initial_weights=[\n",
+    "_rnd.g = graph.XnorGraph(0, 0, 1, learning_rate=0.1, initial_weights=[\n",
     "    np.array([[-0.06712879,  1.32756237, -0.37880782],\n",
     "             [ 0.578714  ,  1.13425279,  1.29724594]]),\n",
     "    np.array([[0.77283363, -1.14595272,  1.60115422]])\n",
@@ -93,20 +109,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss:  0.25303232718893315\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Loss: \", g.forward())"
+    "print(\"Loss: \", _rnd.g.forward())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current prediction: 0.77644278120454\n"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Current prediction:\", g.predict())"
+    "print(\"Current prediction:\", _rnd.g.predict())"
    ]
   },
   {
@@ -118,16 +150,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.010037060605711176\n",
+      "Predictio: 0.9900131425815477\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(500):\n",
-    "    g.forward()\n",
-    "    g.backward()\n",
+    "    _rnd.g.forward()\n",
+    "    _rnd.g.backward()\n",
     "\n",
-    "print(\"Loss:\", g.forward())\n",
-    "print(\"Predictio:\", g.predict())"
+    "print(\"Loss:\", _rnd.g.forward())\n",
+    "print(\"Predictio:\", _rnd.g.predict())"
    ]
   },
   {
@@ -139,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -165,36 +206,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9817798754326403\n"
+     ]
+    }
+   ],
    "source": [
     "test_one(1, 1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00892963782178076\n"
+     ]
+    }
+   ],
    "source": [
     "test_one(1, 0, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.020687638065868014\n"
+     ]
+    }
+   ],
    "source": [
     "test_one(0, 1, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9858585508633164\n"
+     ]
+    }
+   ],
    "source": [
     "test_one(0, 0, 1)"
    ]
